@@ -1,6 +1,10 @@
 FlightPath 5.x Changelog
 ========================
 
+2016-10-10
+  Corrected logic on the min hours in groups code.
+
+
 2016-10-08
   Added default setting to stop filling courses into a group once the min hours are met.
   
